--- a/bundles/3scale-operator/bundles.yaml
+++ b/bundles/3scale-operator/bundles.yaml
@@ -13,10 +13,6 @@ bundles:
       image: quay.io/integreatly/3scale-bundle:v0.8.3-0.1645735250
     - name: 3scale-operator.v0.8.3+0.1646619125.p
       image: quay.io/integreatly/3scale-bundle:v0.8.3-0.1646619125
-    - name: 3scale-operator.v0.8.3+0.1646742992.p
-      image: quay.io/integreatly/3scale-bundle:v0.8.3-0.1646742992
-    - name: 3scale-operator.v0.8.3+0.1649688682.p
-      image: quay.io/integreatly/3scale-bundle:v0.8.3-0.1649688682
     - name: 3scale-operator.v0.8.4
       image: quay.io/integreatly/3scale-bundle:v0.8.4
     - name: 3scale-operator.v0.9.0
@@ -25,3 +21,5 @@ bundles:
       image: quay.io/integreatly/3scale-bundle:v0.9.1
     - name: 3scale-operator.v0.10.0-mas
       image: quay.io/integreatly/3scale-bundle:v0.10.0-mas
+    - name: 3scale-operator.v0.11.0-mas
+      image: quay.io/integreatly/3scale-bundle:v0.11.0-mas
