MGDAPI-4907 - Initial MCG reconciler
MGDAPI-4907 - rbac changes for MCG resources

MGDAPI-4907 - MCG reconcile CRs

MGDAPI-4907 - create s3-credentials secret for MCG

MGDAPI-4907 - retrieve ingress IP for GCP

MGDAPI-4907 - disable load balancer for mcg mgmt service

MGDAPI-4907 - add tests for mcg reconciler

MGDAPI-4907 - reduce storage requirements

MGDAPI-4907 - fix threescale tests

MGDAPI-4907 - fix gosec issue

MGDAPI-4907 - update with integreatly index

MGDAPI-4907 - remove redundant variables

MGDAPI-4907 - add watches for ObjectBucketClaim

MGDAPI-4907 - enable MCG for GCP only

MGDAPI-4907 - additional tests

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -267,6 +267,17 @@ rules:
   - list
   - update
 - apiGroups:
+  - noobaa.io
+  resources:
+  - backingstores
+  - bucketclasses
+  - noobaas
+  verbs:
+  - create
+  - get
+  - list
+  - update
+- apiGroups:
   - oauth.openshift.io
   resources:
   - oauthclients
@@ -275,6 +286,22 @@ rules:
   - delete
   - get
   - update
+- apiGroups:
+  - objectbucket.io
+  resources:
+  - objectbucketclaims
+  verbs:
+  - create
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
+  - objectbucket.io
+  resources:
+  - objectbuckets
+  verbs:
+  - list
 - apiGroups:
   - observability.redhat.com
   resources:
