MGDAPI-4907 - rbac changes for MCG resources

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -252,6 +252,17 @@ rules:
   - list
   - update
 - apiGroups:
+  - noobaa.io
+  resources:
+  - backingstores
+  - bucketclasses
+  - noobaas
+  verbs:
+  - create
+  - get
+  - list
+  - update
+- apiGroups:
   - oauth.openshift.io
   resources:
   - oauthclients
@@ -260,6 +271,21 @@ rules:
   - delete
   - get
   - update
+- apiGroups:
+  - objectbucket.io
+  resources:
+  - objectbucketclaims
+  verbs:
+  - create
+  - get
+  - list
+  - update
+- apiGroups:
+  - objectbucket.io
+  resources:
+  - objectbuckets
+  verbs:
+  - list
 - apiGroups:
   - observability.redhat.com
   resources:
