MGDAPI-5059 update rhoam rbac

--- a/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -304,6 +304,7 @@ spec:
                 - apimanagers
               verbs:
                 - create
+                - delete
                 - get
                 - list
                 - update
