--- a/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -501,6 +501,7 @@ spec:
                 - subscriptions
               verbs:
                 - create
+                - delete
                 - update
             - apiGroups:
                 - project.openshift.io
