--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -95,4 +95,4 @@ products:
         channel: stable-4.11
         installFrom: index
         package: mcg-operator
-        index: quay.io/acatterm/mcg-index:v4.11.4
+        index: quay.io/integreatly/mcg-index:v4.11.4
