MGDAPI-5000 : Addressing rbac issue

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -44,6 +44,12 @@ rules:
   - list
 - apiGroups:
   - ""
+  resources:
+  - pods/exec
+  verbs:
+  - create
+- apiGroups:
+  - ""
   resourceNames:
   - grafana-datasources
   resources:
