MGDAPI-5079 - fix: missing permssion for balancing pods
With https://issues.redhat.com/browse/MGDAPI-4706 some namespaces are now created externally and this change missed a permission for multi az clusters

--- a/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -216,6 +216,7 @@ spec:
                 - pods
               verbs:
                 - create
+                - list
             - apiGroups:
                 - ""
               resourceNames:
