--- a/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.31.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -219,6 +219,12 @@ spec:
                 - list
             - apiGroups:
                 - ""
+              resources:
+                - pods/exec
+              verbs:
+                - create
+            - apiGroups:
+                - ""
               resourceNames:
                 - grafana-datasources
               resources:
