MGDAPI-4603 Fixed S1039 issues caught by gosimple linter

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -8,7 +8,7 @@ issues:
 
 linters-settings:
   gosimple:
-    checks: ["all", -S1004, -S1008, -S1028, -S1039, -S1002, -S1005, -S1031, -S1011, -S1023, -S1025, -S1034, -S1001]
+    checks: ["all", -S1004, -S1008, -S1028, -S1002, -S1005, -S1031, -S1011, -S1023, -S1025, -S1034, -S1001]
   staticcheck:
     checks: ["all", -SA4006, -SA9003, -SA5011, -SA4001, -SA4010, SA1019, -SA1030, -SA6000, -SA4009, -SA4022, -SA5001]
 
