--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -65,7 +65,7 @@ products:
         channel: rhmi
         installFrom: index
         package: rhmi-cloud-resources
-        index: quay.io/integreatly/cloud-resource-operator:index-v0.44.0
+        index: quay.io/acatterm/cloud-resource-operator:index-v0.41.0-gcp
     grafana:
         channel: rhmi
         installFrom: local
