--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -61,12 +61,12 @@ products:
         installFrom: index
         package: 3scale-operator
         # temp solution for 4.12
-        index: quay.io/integreatly/3scale-index:v0.11.0-mas
+        index: quay.io/acatterm/3scale-index:v0.12.0-mas
     cloud-resources:
         channel: rhmi
         installFrom: index
         package: rhmi-cloud-resources
-        index: quay.io/integreatly/cloud-resource-operator:index-v0.42.0
+        index: quay.io/acatterm/cloud-resource-operator:index-v0.41.0-gcp
     grafana:
         channel: rhmi
         installFrom: local
