MGDAPI-4964 refactor of creation of missing metrics alerts
openshift-monitoring - rhoam missing metrics alert with metrics used in critical alerts in that stack for rhoam with appropriate time
rhoam absent metrics monitoring - rhoam missing metrics alerts with metrics used in crtical alerts in that stack for rhoam with appropriate time
threescale absent metrics monitorin - threescale missing metrics created at the same time as the metrics critical to those alerts.

moving custom domain alerts to rhmi and threescale controller/reconciler as appropriate.

--- a/prometheus-unit-testing/rules/rhoam_general.yml
+++ b/prometheus-unit-testing/rules/rhoam_general.yml
@@ -4,7 +4,7 @@ groups:
     - alert: CriticalMetricsMissing
       annotations:
         message: one or more critical metrics have been missing for 10+ minutes
-      expr: (absent(kube_endpoint_address_available) or absent(kube_pod_container_status_ready) or absent(kube_pod_labels) or absent(kube_pod_status_phase) or absent(kube_pod_status_ready) or absent(kube_secret_info) or absent(rhoam_version) or absent(threescale_portals)) == 1
+      expr: absent(rhoam_version) == 1
       for: 10m
       labels:
         severity: critical
