MGDAPI-5194 Skipped CPaaS/scorecard deployment tests

--- a/config/scorecard/bases/config.yaml
+++ b/config/scorecard/bases/config.yaml
@@ -2,6 +2,8 @@ apiVersion: scorecard.operatorframework.io/v1alpha3
 kind: Configuration
 metadata:
   name: config
+  cvp_skip_deployment_test: true
+  cvp_skip_catalog_init_test: true
 stages:
 - parallel: true
   tests: []
