--- a/bundles/rhsso-operator/bundles.yaml
+++ b/bundles/rhsso-operator/bundles.yaml
@@ -13,3 +13,11 @@ bundles:
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-10
     - name: rhsso-operator.v7.6.1-3
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-3
+    - name: rhsso-operator.v7.6.1-7
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-7
+    - name: rhsso-operator.v7.6.1-8
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-8
+    - name: rhsso-operator.v7.6.1-9
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-9
+    - name: rhsso-operator.v7.6.1-10
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-10
