MGDAPI-5275 - fix: disable cluster logging

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -230,6 +230,13 @@ rules:
   - patch
   - update
 - apiGroups:
+  - logging.openshift.io
+  resources:
+  - clusterlogforwarders
+  - clusterloggings
+  verbs:
+  - delete
+- apiGroups:
   - managed.openshift.io
   resources:
   - customdomains
@@ -341,6 +348,7 @@ rules:
   - projects
   verbs:
   - delete
+  - get
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
