--- a/bundles/managed-api-service/1.34.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.34.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -43,7 +43,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:master
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.34.0
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.12"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.21.0
@@ -102,7 +102,7 @@ metadata:
           "marin3r-limitador": "quay.io/3scale/limitador:v0.5.1"
         }
       }
-    serviceAffecting: "true"
+    serviceAffecting: "false"
   name: managed-api-service.v1.34.0
   namespace: placeholder
 spec:
@@ -667,7 +667,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:master
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.34.0
                     imagePullPolicy: Always
                     livenessProbe:
                       exec:
