--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -60,7 +60,7 @@ products:
         channel: threescale-mas
         installFrom: index
         package: 3scale-operator
-        index: quay.io/integreatly/3scale-index:v0.11.3-mas
+        index: quay.io/acatterm/3scale-operator-index:mgdapi-5152
     cloud-resources:
         channel: rhmi
         installFrom: index
