--- a/Dockerfile.scorecard
+++ b/Dockerfile.scorecard
@@ -4,10 +4,13 @@ WORKDIR /workspace
 # Copy the Go Modules manifests and vendor
 COPY go.mod ./go.mod
 COPY go.sum ./go.sum
+COPY go.work ./go.work
 COPY vendor ./vendor
+COPY test ./test
+
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
-# RUN go mod download
+RUN go mod download
 
 COPY make ./make
 COPY Makefile ./Makefile
