--- a/bundles/managed-api-service/1.36.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.36.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -43,7 +43,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:master
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.36.0
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.12"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.21.0
@@ -62,8 +62,8 @@ metadata:
           "system_memcached": "registry.redhat.io/3scale-mas/memcached-rhel7@sha256:626e3e0653bff291012b88d9b7928ffc468e3c11eb95ea41f2829c99654c2c89",
           "system_postgresql": "registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:1f798022545e74a9465f16b7e499b97c45e1ada01ccc887f5d7d643f0fb1ebd4"
         },
-        "cloud-resource-operator.v1.0.1": {
-          "cloud-resources.v1.0.1": "quay.io/integreatly/cloud-resource-operator:v1.0.1"
+        "cloud-resource-operator.v1.1.0": {
+          "cloud-resources.v1.1.0": "quay.io/integreatly/cloud-resource-operator:v1.1.0"
         },
         "grafana-operator.v4.2.0": {
           "grafana-operator.v4.2.0": "quay.io/grafana-operator/grafana-operator:v4.2.0",
@@ -73,11 +73,11 @@ metadata:
           "marin3r.v0.11.0": "quay.io/3scale/marin3r:v0.11.0"
         },
         "rhsso-operator.18.0.x": {
-          "rhsso-operator.7.6.2-opr-001": "registry.redhat.io/rh-sso-7/sso7-rhel8-operator@sha256:b7e3770ca8d636f0b7c2091e16a8c5254814e5302f168bff5f67975b677f2701",
+          "rhsso-operator.7.6.2-opr-002": "registry.redhat.io/rh-sso-7/sso7-rhel8-operator@sha256:b7e3770ca8d636f0b7c2091e16a8c5254814e5302f168bff5f67975b677f2701",
           "sso7-rhel8-operator-b7e3770ca8d636f0b7c2091e16a8c5254814e5302f168bff5f67975b677f2701-annotation": "registry.redhat.io/rh-sso-7/sso7-rhel8-operator@sha256:b7e3770ca8d636f0b7c2091e16a8c5254814e5302f168bff5f67975b677f2701",
           "rhsso-operator": "registry.redhat.io/rh-sso-7/sso7-rhel8-operator@sha256:b7e3770ca8d636f0b7c2091e16a8c5254814e5302f168bff5f67975b677f2701",
-          "rhsso_openjdk": "registry.redhat.io/rh-sso-7/sso76-openshift-rhel8@sha256:f19170a58d93345360cf0f8b9a8c93acbcc77e7315c9e2f69a833b276567b77a",
-          "rhsso_openj9": "registry.redhat.io/rh-sso-7/sso76-openshift-rhel8@sha256:f19170a58d93345360cf0f8b9a8c93acbcc77e7315c9e2f69a833b276567b77a",
+          "rhsso_openjdk": "registry.redhat.io/rh-sso-7/sso76-openshift-rhel8@sha256:b86164cb33d468e8be1526fd4c017d404dae9bc9be1bb6fb0a3a37c17b000ef4",
+          "rhsso_openj9": "registry.redhat.io/rh-sso-7/sso76-openshift-rhel8@sha256:b86164cb33d468e8be1526fd4c017d404dae9bc9be1bb6fb0a3a37c17b000ef4",
           "keycloak_init_container": "registry.redhat.io/rh-sso-7/sso7-rhel8-init-container@sha256:1dfef1cdafcb10535c259d8866ceaca0a4264f348f9f9f87e3d1f892c722e2a4",
           "rhsso_init_container": "registry.redhat.io/rh-sso-7/sso7-rhel8-init-container@sha256:1dfef1cdafcb10535c259d8866ceaca0a4264f348f9f9f87e3d1f892c722e2a4"
         },
@@ -102,7 +102,7 @@ metadata:
           "marin3r-limitador": "quay.io/3scale/limitador:v0.5.1"
         }
       }
-    serviceAffecting: "true"
+    serviceAffecting: "false"
   name: managed-api-service.v1.36.0
   namespace: placeholder
 spec:
@@ -667,7 +667,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:master
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.36.0
                     imagePullPolicy: Always
                     livenessProbe:
                       exec:
