--- a/bundles/rhsso-operator/bundles.yaml
+++ b/bundles/rhsso-operator/bundles.yaml
@@ -25,3 +25,7 @@ bundles:
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.2-3
     - name: rhsso-operator.v7.6.2-4
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.2-4
+    - name: rhsso-operator.v7.6.2-5
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.2-5
+    - name: rhsso-operator.v7.6.3-1
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.3-1
